--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "compileOnSave": "false",
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
